[build-system]
requires = [
  "numpy>=1.14.5,<2.1.3", # must agree with ../requirements.txt
  "swig==4.3.1",  # must agree with ../requirements_dev.txt
  "cmake==4.0.0", # must agree with ../requirements_dev.txt
  "setuptools==75.3.0", # must agree with ../requirements_dev.txt
  "wheel==0.45.1", # must agree with ../requirements_dev.txt
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "pip"
build-verbosity = 1

[tool.cibuildwheel.macos]
before-test = "python -m pip install -r {project}/requirements.txt -r {project}/requirements_dev.txt"
test-command = "python {package}/../bindings/python/tests/test_python_bindings.py"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --dylibs-only"

[tool.cibuildwheel.windows]
before-test = "python -m pip install -r {project}\\requirements.txt -r {project}\\requirements_dev.txt"
test-command = "python {package}\\..\\bindings\\python\\tests\\test_python_bindings.py"

[tool.cibuildwheel.linux]
environment-pass = ["CI_BUILD_CMAKE_ARGS", "CI_PIP_CACHE_DIR"]
before-build = [
  "rm -rf {project}/python/build/temp*",
  "export PYVER=$(python -c \"import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')\")",
  "export ABITAG=$(python -c \"import sys; cp=f'cp{sys.version_info.major}{sys.version_info.minor}'; print(f'{cp}-{cp}{sys.abiflags}')\")",
]
test-command = "python {package}/../bindings/python/tests/test_python_bindings.py"

[tool.cibuildwheel.linux.environment]
PYVER = "$(python -c \"import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')\")"
PYABI = "$(python -c \"import sys; print(sys.abiflags)\")"
ABITAG = "$(python -c \"import sys; cp=f'cp{sys.version_info.major}{sys.version_info.minor}'; print(f'{cp}-{cp}{sys.abiflags}')\")"

INSTALLDIR = "{project}/python/build/lib.manylinux2014_x86_64-${PYVER}"
CMAKE = "/opt/python/${ABITAG}/bin/cmake"
Python3_EXECUTABLE = "/opt/python/${ABITAG}/bin/python${PYVER}${PYABI}"
Python3_LIBRARY = "/opt/python/${ABITAG}/lib/libpython${PYVER}${PYABI}.a"
Python3_INCLUDE_DIR = "/opt/python/${ABITAG}/include/python${PYVER}${PYABI}"

CI_BUILD_CMAKE_ARGS = "-DCMAKE_INSTALL_PREFIX=$INSTALLDIR,-DPython3_EXECUTABLE=$Python3_EXECUTABLE,-DPython3_LIBRARY=$Python3_LIBRARY,-DPython3_INCLUDE_DIR=$Python3_INCLUDE_DIR,-DWITH_STATIC_PYTHON=YES"
